misskey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: misskey
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: misskey
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: misskey
  namespace: misskey
spec:
  selector:
    app: misskey
  ports:
    - name: http
      port: 3000
      targetPort: 3000
