misskey/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: misskey
  namespace: misskey
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: mydnschallenge
  routes:
    # 変更したら secret.yaml の default.yml の url も合わせること。
    - match: Host(`my.doany.io`)
      kind: Rule
      services:
        - name: misskey
          port: 3000
